# avcpu

./: Cargo.toml  Makefile  README.md  changelog.md  execution_data.json  program.asmcpu
src/: ai_optimizer.rs  assembler.rs  cpu.rs  main.rs
